Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
 
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
-  Absolute Path (external link)
+  
+  <a href="learn.co">Absolute Path (external link)</a>
 
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
   Relative Path (internal link)
