--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <a href="learn.co">Absolute Path (external link)</a>
 
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
-  Relative Path (internal link)
+    <a href="about.html">Relative Path (internal link)</a>
 
   <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion">
