--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="about.html">Relative Path (internal link)</a>
 
   <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
-  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion">
+ <a href="about.html" target="_blank"><img src="https://ironboard-learn.s3.amazonaws.com/Image_61_lion.jpg" alt="Image by Alexas Fotos from Pixabay"></a>
 
 </body>
 </html>
